tests/rosetta/out/Zig/arena-storage-pool.error
zig build: exit status 1
/tmp/arena-storage-pool.zig:35:14: error: unused function parameter
